--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                     <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
                     <p class="mb-5">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
                         des travaux d'ornement ou de construction dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
-                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
+                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
                         Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
                     </p>
@@ -180,7 +180,7 @@
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Nos caractéristiques</h6>
                     <h5 class="mb-5" >Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
-                        Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de construction dans la province !</h5>
+                        </h5>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
@@ -202,7 +202,7 @@
                     <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s">
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
-                            <h5>24/7 Assistance téléphonique</h5>
+                            <h5>Du Lundi au Samedi - Assistance téléphonique</h5>
                             <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard</p>
                         </div>
                     </div>
@@ -231,8 +231,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Nom Complet</h5>
-                    <p>Désignation</p>
+                    <h5 class="mb-0">Mr Théophane BOUBEBE NDOUME</h5>
+                    <p>Manager</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -248,8 +248,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Nom Complet</h5>
-                    <p>Désignation</p>
+                    <h5 class="mb-0">Mr Anatole OBAM</h5>
+                    <p>Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -265,8 +265,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Nom Complet</h5>
-                    <p>Désignation</p>
+                    <h5 class="mb-0">Mr Franck MOUSSAVOU</h5>
+                    <p>Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -282,8 +282,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Nom Complet</h5>
-                    <p>Désignation</p>
+                    <h5 class="mb-0">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
+                    <p>Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -306,7 +306,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Bd Ondimba, Port-Gentil, GA</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com.com</p>
                 <div class="d-flex pt-2">
