--- a/feature.html
+++ b/feature.html
@@ -181,7 +181,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Ondimba, Port-Gentil, GA</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
