--- a/quote.html
+++ b/quote.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+   <!-- <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Chargement...</span>
         </div>
@@ -106,27 +106,43 @@
             </div>
             <div class="col-lg-7">
                 <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
-                    <form>
+                    <form  action="https://formspree.io/f/mldrrzqn"
+                    method="POST">
                         <div class="row g-3">
                             <div class="col-12 col-sm-6">
-                                <input type="text" class="form-control border-0" placeholder="Votre Nom" style="height: 55px;">
+                                <input type="text"  name="Nom du client" form-control border-0" placeholder="Votre Nom" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <input type="email" class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
+                                <input type="email" name="Mail du client"class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <input type="text" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
+                                <input type="text" name="Téléphone du client" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <select class="form-select border-0" style="height: 55px;">
+                                <select class="form-select border-0" name="Choix du client" style="height: 55px;">
                                     <option selected>Choisissez un fret</option>
-                                    <option value="1">frett 1</option>
-                                    <option value="2">frett 2</option>
-                                    <option value="3">frett 3</option>
+                                        <option value="1">Sable</option>
+                                        <option value="2">Gravier</option>
+                                        <option value="3">Ciment</option
+                                            <select class="form-select border-0" name="Choix du client" style="height: 55px;">
+                                                <option selected>Choix du ciment</option>
+                                                <option value="4">CEM II B-LL/42.5N</option>
+                                                <option value="4">CEM II B-LL/32.5N</option>
+                                                select class="form-select border-0" name="Choix du client" style="height: 55px;">
+                                                <option value="4">1-5 Tonnes</option>
+                                                <option value="4">5-10 Tonnes</option>
+                                                <option value="4">1-15 Tonnes</option>
+                                                <option value="4">15-20 Tonnes</option>
+                                                <option value="4">20-25Tonnes</option>
+                                                <option value="4">Autre Tonnes</option>
+                                        <option value="4">Transport</option>
+                                        <option value="5">Negoces</option>
+                                        <option value="6">Entrepot</option>
+                                        <option value="7">Produits concassés</option>
                                 </select>
                             </div>
                             <div class="col-12">
-                                <textarea class="form-control border-0" placeholder="Note spéciale"></textarea>
+                                <textarea class="form-control border-0"name="Commentaire du client du client" placeholder="Commentez votre Commande ici!"></textarea>
                             </div>
                             <div class="col-12">
                                 <button class="btn btn-primary w-100 py-3" type="submit">Soumettre</button>
@@ -146,7 +162,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Ondimba, Port-Gentil, GA</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
