--- a/price.html
+++ b/price.html
@@ -106,7 +106,7 @@
                                     class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Mois</small>
                             </h1>
                         </div>
-                        <div class="p-4 pt-0">
+                        <!--  <div class="p-4 pt-0">
                             <p><i class="fa fa-check text-success me-3"></i>HTML5 & CSS3</p>
                             <p><i class="fa fa-check text-success me-3"></i>Bootstrap v5</p>
                             <p><i class="fa fa-check text-success me-3"></i>FontAwesome Icons</p>
@@ -191,9 +191,9 @@
                                 <div class="col-12 col-sm-6">
                                     <select class="form-select border-0" style="height: 55px;">
                                         <option selected>Sélectionner un type de granulat</option>
-                                        <option value="1">granulat 1</option>
-                                        <option value="2">granulat 2</option>
-                                        <option value="3">granulat 3</option>
+                                        <option value="1">Sable</option>
+                                        <option value="2">Gravier</option>
+                                        <option value="3">Ciment</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
