modification des options des commandes clients

--- a/quote.html
+++ b/quote.html
@@ -119,33 +119,47 @@
                                 <input type="text" name="Téléphone du client" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
                             </div>
                             <div class="col-12 col-sm-6">
-                                <select class="form-select border-0" name="Choix du client" style="height: 55px;">
+                                <select class="form-select border-0" name="Choix du Fret" style="height: 55px;">
                                     <option selected>Choisissez un fret</option>
                                         <option value="1">Sable</option>
                                         <option value="2">Gravier</option>
-                                        <option value="3">Ciment</option
-                                            <select class="form-select border-0" name="Choix du client" style="height: 55px;">
-                                                <option selected>Choix du ciment</option>
-                                                <option value="4">CEM II B-LL/42.5N</option>
-                                                <option value="4">CEM II B-LL/32.5N</option>
-                                                select class="form-select border-0" name="Choix du client" style="height: 55px;">
-                                                <option value="4">1-5 Tonnes</option>
+                                        <option value="3">Ciment</option>
+                                        <option value="3">Féraille</option>
+                                        <option value="3">Logistique et Transport</option>
+                                        <option value="7">Produits concassés</option>
+                                </select>
+                                <select class="form-select border-0" name="Choix du Ciment" style="height: 55px;">
+                                        <option selected>Choix du ciment</option>
+                                        <option value="4">CEM II B-LL/42.5N</option>
+                                        <option value="4">CEM II B-LL/32.5N</option>
+                                </select>
+                                <select class="form-select border-0" name="Quantité de Ciment" style="height: 55px;">
+                                        <option selected>Quantité de Ciment</option>
+                                        <option value="4">1-5 Tonnes</option>
                                                 <option value="4">5-10 Tonnes</option>
                                                 <option value="4">1-15 Tonnes</option>
                                                 <option value="4">15-20 Tonnes</option>
                                                 <option value="4">20-25Tonnes</option>
                                                 <option value="4">Autre Tonnes</option>
+                                </select>
+                                <select class="form-select border-0" name="Choix du Sable" style="height: 55px;">
+                                        <option selected>Choix du Sable</option>
+                                        <option value="4">Sable de Fleuve</option>
+                                                <option value="4">Sable Marin</option>
+                                                <option value="4">Remblais</option>
+                                </select>
+                                <select class="form-select border-0" name="Autres Services" style="height: 55px;">
+                                        <option selected>Autres Services</option>
                                         <option value="4">Transport</option>
                                         <option value="5">Negoces</option>
                                         <option value="6">Entrepot</option>
-                                        <option value="7">Produits concassés</option>
                                 </select>
                             </div>
                             <div class="col-12">
-                                <textarea class="form-control border-0"name="Commentaire du client du client" placeholder="Commentez votre Commande ici!"></textarea>
+                                <textarea class="form-control border-0"name="Commentaire du client" placeholder="Commentez votre Commande ici!"></textarea>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Soumettre</button>
+                                <button class="btn btn-primary w-100 py-3" type="submit">Envoyer</button>
                             </div>
                         </div>
                     </form>
