--- a/index.html
+++ b/index.html
@@ -401,61 +401,89 @@
     <!-- Pricing End -->
 
 
-    <!-- Quote Start -->
-    <div class="container-xxl py-5">
-        <div class="container py-5">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
-                    <h1 class="mb-5">Demander un Devis!</h1>
-                    <p class="mb-5">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
-                    <div class="d-flex align-items-center">
-                        <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
-                        <div class="ps-4">
-                            <h6>Appelez pour toute question!</h6>
-                            <h3 class="text-primary m-0">+241 773 908 01</h3>
-                        </div>
+  <!-- Quote Start -->
+ <div class="container-xxl py-5">
+    <div class="container py-5">
+        <div class="row g-5 align-items-center">
+            <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
+                <h1 class="mb-5">Demander un Devis!</h1>
+                <p class="mb-5">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
+                <div class="d-flex align-items-center">
+                    <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
+                    <div class="ps-4">
+                        <h6>Appelez pour toute question!</h6>
+                        <h3 class="text-primary m-0">+241 773 908 01</h3>
                     </div>
                 </div>
-                <div class="col-lg-7">
-                    <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Votre Nom" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Choisissez un fret</option>
+            </div>
+            <div class="col-lg-7">
+                <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
+                    <form  action="https://formspree.io/f/mldrrzqn"
+                    method="POST">
+                        <div class="row g-3">
+                            <div class="col-12 col-sm-6">
+                                <input type="text"  name="Nom du client" form-control border-0" placeholder="Votre Nom" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="email" name="Mail du client"class="form-control border-0" placeholder="Votre E-mail" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="Téléphone du client" class="form-control border-0" placeholder="Votre Téléphone" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <select class="form-select border-0" name="Choix du Fret" style="height: 55px;">
+                                    <option selected>Choisissez un fret</option>
                                         <option value="1">Sable</option>
                                         <option value="2">Gravier</option>
                                         <option value="3">Ciment</option>
+                                        <option value="3">Féraille</option>
+                                        <option value="3">Logistique et Transport</option>
+                                        <option value="7">Produits concassés</option>
+                                </select>
+                                <select class="form-select border-0" name="Choix du Ciment" style="height: 55px;">
+                                        <option selected>Choix du ciment</option>
+                                        <option value="4">CEM II B-LL/42.5N</option>
+                                        <option value="4">CEM II B-LL/32.5N</option>
+                                </select>
+                                <select class="form-select border-0" name="Quantité de Ciment" style="height: 55px;">
+                                        <option selected>Quantité de Ciment</option>
+                                        <option value="4">1-5 Tonnes</option>
+                                                <option value="4">5-10 Tonnes</option>
+                                                <option value="4">1-15 Tonnes</option>
+                                                <option value="4">15-20 Tonnes</option>
+                                                <option value="4">20-25Tonnes</option>
+                                                <option value="4">Autre Tonnes</option>
+                                </select>
+                                <select class="form-select border-0" name="Choix du Sable" style="height: 55px;">
+                                        <option selected>Choix du Sable</option>
+                                        <option value="4">Sable de Fleuve</option>
+                                                <option value="4">Sable Marin</option>
+                                                <option value="4">Remblais</option>
+                                </select>
+                                <select class="form-select border-0" name="Autres Services" style="height: 55px;">
+                                        <option selected>Autres Services</option>
                                         <option value="4">Transport</option>
                                         <option value="5">Negoces</option>
                                         <option value="6">Entrepot</option>
-                                        <option value="7">Produits concassés</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Plus de détails sur votre commande"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Soumettre</button>
-                                </div>
+                                </select>
                             </div>
-                        </form>
-                    </div>
+                            <div class="col-12">
+                                <textarea class="form-control border-0"name="Commentaire du client" placeholder="Commentez votre Commande ici!"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3" type="submit">Envoyer</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Quote End -->
+</div>
+<!-- Quote End -->
+        
+<!-- Footer Start -->
 
 
  <!-- Team Start -->
