--- a/404.html
+++ b/404.html
@@ -99,15 +99,15 @@
     <!-- 404 End -->
         
 
-   <!-- Footer Start -->
-   <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
+  <!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com.com</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -117,10 +117,11 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Services</h4>
-                <a class="btn btn-link" href="">Produits Roulés</a>
-                <a class="btn btn-link" href="">Produits concassés</a>
-                <a class="btn btn-link" href="">Gravier Concassé</a>
-                <a class="btn btn-link" href="">Solutions Logistiques</a>
+                <a class="btn btn-link" href="">Sables</a>
+                <a class="btn btn-link" href="">Graviers</a>
+                <a class="btn btn-link" href="">Remblais</a>
+                <a class="btn btn-link" href="">Latérite</a>
+                <a class="btn btn-link" href="">Solutions logistiques</a>
                 <a class="btn btn-link" href="">Solutions sectorielles</a>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -145,7 +146,7 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">BIKENE</a>, Tous droits réservés.
+                    &copy; <a class="border-bottom" href="#">BIKERE</a>, Tous droits réservés.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -156,7 +157,6 @@
     </div>
 </div>
 <!-- Footer End -->
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-0 back-to-top"><i class="bi bi-arrow-up"></i></a>
 
