--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i>+241 773 908 01</h4>
+            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p></h4>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -163,7 +163,7 @@
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
                             <h6>Appelez pour toute question!</h6>
-                            <h3 class="text-primary m-0">+241 773 908 01</h3>
+                            <a href="tel:+241 773 908 01">+241 773 908 01</a>
                         </div>
                     </div>
                 </div>
@@ -634,7 +634,7 @@
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
