--- a/quote.html
+++ b/quote.html
@@ -67,7 +67,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i>+241 773 908 01</h4>
+            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p></h4>
         </div>
     </nav>
     <!-- Navbar End -->
