--- a/team.html
+++ b/team.html
@@ -67,7 +67,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i>+241 773 908 01</h4>
+            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p></h4>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -177,7 +177,7 @@
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Adresse</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -188,10 +188,11 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Services</h4>
-                <a class="btn btn-link" href="">Produits Roulés</a>
-                <a class="btn btn-link" href="">Produits concassés</a>
-                <a class="btn btn-link" href="">Gravier Concassé</a>
-                <a class="btn btn-link" href="">Solutions Logistiques</a>
+                <a class="btn btn-link" href="">Sables</a>
+                <a class="btn btn-link" href="">Graviers</a>
+                <a class="btn btn-link" href="">Remblais</a>
+                <a class="btn btn-link" href="">Latérite</a>
+                <a class="btn btn-link" href="">Solutions logistiques</a>
                 <a class="btn btn-link" href="">Solutions sectorielles</a>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -216,7 +217,7 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">BIKENE</a>, Tous droits réservés.
+                    &copy; <a class="border-bottom" href="#">BIKERE</a>, Tous droits réservés.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
