--- a/testimonial.html
+++ b/testimonial.html
@@ -67,7 +67,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i>+241 773 908 01</h4>
+            <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-headphones text-primary me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p></h4>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -147,64 +147,64 @@
 
  
 
-     <!-- Footer Start -->
-     <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Adresse</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+241 773 908 01</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Produits Roulés</a>
-                    <a class="btn btn-link" href="">Produits concassés</a>
-                    <a class="btn btn-link" href="">Gravier Concassé</a>
-                    <a class="btn btn-link" href="">Solutions Logistiques</a>
-                    <a class="btn btn-link" href="">Solutions sectorielles</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Liens rapides</h4>
-                    <a class="btn btn-link" href="">Qui sommes-nous</a>
-                    <a class="btn btn-link" href="">Contactez-nous</a>
-                    <a class="btn btn-link" href="">Nos Services</a>
-                    <a class="btn btn-link" href="">Termes et conditions</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Abonnez-vous à notre Newsletter pour ne manquer aucune de nos offres et services.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre e-mail">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'abonner</button>
-                    </div>
+    <!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-light mb-4">Adresse</h4>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">BIKENE</a>, Tous droits réservés.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Conçu par <a class="border-bottom" href="https://lionel-johnson.github.io/LionelConcept">Lionel Concept</a>
-                    </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-light mb-4">Services</h4>
+                <a class="btn btn-link" href="">Sables</a>
+                <a class="btn btn-link" href="">Graviers</a>
+                <a class="btn btn-link" href="">Remblais</a>
+                <a class="btn btn-link" href="">Latérite</a>
+                <a class="btn btn-link" href="">Solutions logistiques</a>
+                <a class="btn btn-link" href="">Solutions sectorielles</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-light mb-4">Liens rapides</h4>
+                <a class="btn btn-link" href="">Qui sommes-nous</a>
+                <a class="btn btn-link" href="">Contactez-nous</a>
+                <a class="btn btn-link" href="">Nos Services</a>
+                <a class="btn btn-link" href="">Termes et conditions</a>
+                <a class="btn btn-link" href="">Support</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-light mb-4">Newsletter</h4>
+                <p>Abonnez-vous à notre Newsletter pour ne manquer aucune de nos offres et services.</p>
+                <div class="position-relative mx-auto" style="max-width: 400px;">
+                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre e-mail">
+                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'abonner</button>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
-
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a class="border-bottom" href="#">BIKERE</a>, Tous droits réservés.
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    Conçu par <a class="border-bottom" href="https://lionel-johnson.github.io/LionelConcept">Lionel Concept</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
 
 
     <!-- Back to Top -->
